hledger/test/errors/unordered-dates.j
# hledger check ordereddates

account a
commodity 1.
payee p

1/2 p
  (a)  1

1/1 p
  (a)  1
